syntax = "proto3";

option go_package = "github.com/schachte/customraft/proto";

message AddEntryRequest {
	string key = 1;
	string value = 2;
}

message SetValueRequest {
	string key = 1;
	string value = 2;
}

message GetValueRequest {
	string key = 1;
}

message DeleteKeyRequest {
	string key = 1;
}

message KeyResponse {
	string key = 1;
	string value = 2;
}

service KeyValueService {
	rpc AddEntry(AddEntryRequest) returns (KeyResponse){}
	rpc UpdateEntry(SetValueRequest) returns (KeyResponse){}
	rpc DeleteEntry(DeleteKeyRequest) returns (KeyResponse){}
	rpc GetEntry(GetValueRequest) returns (KeyResponse){}
}